# Fitness-Assignment

./: pyproject.toml
fitness_booking/: README.md  pyproject.toml
fitness_booking/src/booking/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
fitness_booking/src/booking/migrations/: 0001_initial.py  0002_alter_booking_unique_together.py  0003_fitnessmodel_instructormodel_bookingmodel_and_more.py  0004_fitnessmodel_class_time_fitnessmodel_days_of_week.py  0005_remove_fitnessmodel_class_time.py  0006_alter_fitnessmodel_options_and_more.py  0007_alter_fitnessmodel_days_of_week.py
fitness_booking/src/config/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
fitness_booking/temp/: seed.py
fitness_booking/tests/booking/: test_model.py  test_views.py
src/: db.sqlite3
src/booking/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
src/booking/migrations/: 0001_initial.py  0002_alter_booking_unique_together.py  0003_fitnessmodel_instructormodel_bookingmodel_and_more.py  0004_fitnessmodel_class_time_fitnessmodel_days_of_week.py  0005_remove_fitnessmodel_class_time.py  0006_alter_fitnessmodel_options_and_more.py  0007_alter_fitnessmodel_days_of_week.py
src/config/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
temp/: seed.py
tests/booking/: test_model.py  test_views.py
